# ad-creative-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
api/: inference.py  main.py
data/alignment_pairs/: alignment_pairs.csv  alignment_pairs_valid.csv
data/eval/: final_results.json
data/labeled/: labels.csv
data/splits/: test.csv  train.csv  val.csv
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AlignmentGauge.jsx  ResultsPanel.jsx  UploadZone.jsx
notebooks/: auto_labeling_qwen.ipynb  colab_training.ipynb  testing.ipynb
scripts/: convert_ls_export.py  download_open_images.py  label_studio_config.xml  prepare_splits.py
src/: alignment.py  alignment_head.py  caption_generator.py  colors.py  dataset.py  evaluate.py  image_model.py  platform_guides.py  sentiment.py  text_encoder.py  train.py
