[project]
name = "visual-content-classifier"
version = "0.1.0"
description = "Multimodal AI system that analyzes ad image-caption alignment and generates platform-specific copy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "fiftyone>=1.16.0",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "torch",
    "torchmetrics>=1.9.0",
    "torchvision",
    "transformers>=5.9.0",
]
